[gd_scene load_steps=8 format=4 uid="uid://bgykdbsbfvrog"]

[ext_resource type="Script" uid="uid://dkhps1nd03dhf" path="res://scenes/node_2d(cafe).gd" id="1_h51gp"]
[ext_resource type="TileSet" uid="uid://dc0xd5vly0tiy" path="res://scenes/node_2d(cafe).tres" id="1_jeuxh"]
[ext_resource type="Texture2D" uid="uid://dnhkkahp6v5fs" path="res://graphic/assets/coffe_beans.png" id="3_ataqq"]
[ext_resource type="Shape2D" uid="uid://b3y33cppmwidh" path="res://scenes/stolykolizja.tres" id="3_npm0j"]
[ext_resource type="Script" uid="uid://cg1ydqfitoitt" path="res://scenes/order_trigger_area.gd" id="6_ke1rn"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_npm0j"]
vertices = PackedVector2Array(365.102, 44, -1.72656, 44, 0.75, -51, 161, -51, 366.891, -126, 260, -118, 161, -125, 172, -125, 172, -118, 260, -126)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 0, 3, 5), PackedInt32Array(3, 6, 7, 8), PackedInt32Array(5, 9, 4), PackedInt32Array(5, 3, 8)])
outlines = Array[PackedVector2Array]([PackedVector2Array(151, -135, 182, -135, 182, -128, 250, -128, 250, -136, 377, -136, 375, 54, -12, 54, -9, -61, 151, -61)])

[sub_resource type="CircleShape2D" id="CircleShape2D_ke1rn"]
radius = 7.0

[node name="Node2D(cafe)" type="Node2D"]
script = ExtResource("1_h51gp")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-182, 73)
tile_set = ExtResource("1_jeuxh")
format = 2

[node name="TileMapLayer" type="TileMapLayer" parent="TileMap"]
position = Vector2(-8, 1)
tile_map_data = PackedByteArray("AAAAAPv/AAATABAAAAAAAPz/AAATABEAAAAAAP3/AAAPABAAAAAAAP7/AAATAA8AAAAAAP//AAATABAAAAABAPv/AAATABAAAAABAPz/AAATABEAAAABAP3/AAAPABAAAAABAP7/AAATAA8AAAABAP//AAATABAAAAACAPv/AAATABAAAAACAPz/AAATABEAAAACAP3/AAAOABAAAAACAP7/AAATAA8AAAACAP//AAATABAAAAADAPv/AAATABAAAAADAPz/AAATABEAAAADAP3/AAAPABAAAAADAP7/AAATAA8AAAADAP//AAATABAAAAAEAPv/AAATABAAAAAEAPz/AAATABEAAAAEAP3/AAAQABAAAAAEAP7/AAATAA8AAAAEAP//AAATABAAAAAFAPv/AAATABAAAAAFAPz/AAATABEAAAAFAP3/AAAPABAAAAAFAP7/AAATAA8AAAAFAP//AAATABAAAAAGAPv/AAATABAAAAAGAPz/AAATABEAAAAGAP3/AAAPABAAAAAGAP7/AAATAA8AAAAGAP//AAATABAAAAAHAPv/AAATABAAAAAHAPz/AAATABEAAAAHAP3/AAATABAAAAAHAP7/AAATAA8AAAAHAP//AAATABAAAAAAAPj/AAANAA8AAAAAAPn/AAANABAAAAAAAPr/AAATAA8AAAABAPj/AAANAA8AAAABAPn/AAANABAAAAABAPr/AAATAA8AAAACAPj/AAANAA8AAAACAPn/AAANABAAAAACAPr/AAATAA8AAAADAPj/AAANAA8AAAADAPr/AAATAA8AAAAEAPj/AAANAA8AAAAEAPr/AAATAA8AAAAFAPj/AAAOABAAAAAFAPr/AAATAA8AAAAGAPr/AAATAA8AAAAHAPr/AAATAA8AAAAIAPv/AAATABAAAAAIAPz/AAATABEAAAAIAP3/AAAPABAAAAAIAP7/AAATAA8AAAAIAP//AAATABAAAAAJAPv/AAATABAAAAAJAPz/AAATABEAAAAJAP3/AAAPABAAAAAJAP7/AAATAA8AAAAJAP//AAATABAAAAAKAPv/AAATABAAAAAKAPz/AAATABEAAAAKAP3/AAAPABAAAAAKAP7/AAATAA8AAAAKAP//AAATABAAAAAMAPv/AAATABAAAAAMAPz/AAATABEAAAAMAP3/AAANABAAAAAMAP7/AAATAA8AAAAMAP//AAATABAAAAALAPv/AAATABAAAAALAPz/AAATABEAAAALAP3/AAAPABAAAAALAP7/AAATAA8AAAALAP//AAATABAAAAANAPv/AAATABAAAAANAPz/AAATABEAAAANAP3/AAANABAAAAANAP7/AAATAA8AAAANAP//AAATABAAAAAOAPv/AAATABAAAAAOAPz/AAATABEAAAAOAP3/AAANABAAAAAOAP7/AAATAA8AAAAOAP//AAATABAAAAAAAAAAAAATABEAAAAAAAEAAAATABAAAAAAAAIAAAATABEAAAAAAAMAAAANABIAAAAAAPf/AAANAA4AAAD///v/AAAMAA8AAAD///z/AAAMABAAAAD///3/AAAMABEAAAD///7/AAAMAA8AAAD///j/AAAMAA8AAAD///n/AAAMABAAAAD///r/AAAMABEAAAD///f/AAAMAA4AAAD/////AAAMABAAAAABAPf/AAANAA4AAAACAPf/AAANAA4AAAADAPf/AAANAA4AAAAEAPf/AAANAA4AAAAFAPf/AAANAA4AAAAIAPr/AAATAA8AAAAJAPj/AAANAA8AAAAJAPn/AAAOABAAAAAJAPr/AAATAA8AAAAKAPf/AAANAA4AAAAKAPj/AAANAA8AAAAKAPn/AAANABAAAAAKAPr/AAATAA8AAAALAPf/AAANAA4AAAALAPj/AAANAA8AAAALAPn/AAANABAAAAALAPr/AAATAA8AAAAMAPf/AAANAA4AAAAMAPj/AAANAA8AAAAMAPn/AAANABAAAAAMAPr/AAATAA8AAAAPAPv/AAATABAAAAAPAPz/AAATABEAAAAPAP3/AAATABAAAAAPAP7/AAATABEAAAANAPf/AAANAA4AAAANAPj/AAANAA8AAAANAPn/AAANABAAAAANAPr/AAATAA8AAAAOAPf/AAANAA4AAAAOAPj/AAANAA8AAAAOAPn/AAANABAAAAAOAPr/AAATAA8AAAAPAPf/AAANAA4AAAAPAPj/AAANAA8AAAAPAPn/AAANABAAAAAPAPr/AAATAA8AAAAQAPf/AAANAA4AAAAQAPj/AAANAA8AAAAQAPn/AAANABAAAAAQAPr/AAATAA8AAAD//wAAAAAMABEAAAD//wEAAAAMAA8AAAD//wIAAAAMABAAAAD//wMAAAAMABIAAAABAAMAAAAOABIAAAACAAMAAAAPABIAAAADAAMAAAAQABIAAAAEAAMAAAARABIAAAAFAAMAAAASABIAAAAGAAMAAAANABIAAAAHAAMAAAAOABIAAAAIAAMAAAAPABIAAAAJAAMAAAAQABIAAAAKAAMAAAARABIAAAALAAMAAAANABIAAAAGAAIAAAATABEAAAAHAAIAAAATABEAAAAIAAIAAAATABEAAAAJAAIAAAATABEAAAAKAAIAAAATABEAAAALAAIAAAATABEAAAAMAAMAAAAOABIAAAANAAMAAAANABIAAAAOAAMAAAAOABIAAAAPAAMAAAAPABIAAAAQAAMAAAAQABIAAAARAAMAAAARABIAAAASAAMAAAAMABIAABASAP//AAANABEAAAASAAAAAAANAA8AAAASAAEAAAANABAAAAASAAIAAAAMAA8AADASAPz/AAANABEAAAASAP3/AAANABAAAAASAP7/AAANABEAAAASAPf/AAANAA8AAAASAPj/AAANABAAAAASAPn/AAANABEAAAASAPr/AAANAA8AAAASAPv/AAANABAAAAABAAAAAAATABEAAAABAAEAAAATABAAAAABAAIAAAATABEAAAACAAAAAAATABEAAAACAAEAAAATABAAAAACAAIAAAATABEAAAADAAAAAAATABEAAAADAAEAAAATABAAAAADAAIAAAATABEAAAAEAAAAAAATABEAAAAEAAEAAAATABAAAAAEAAIAAAATABEAAAAFAAAAAAATABEAAAAFAAEAAAATABAAAAAFAAIAAAATABEAAAAGAAAAAAATABEAAAAGAAEAAAATABAAAAAHAAAAAAATABEAAAAHAAEAAAATABAAAAAIAAAAAAATABEAAAAIAAEAAAATABAAAAAJAAAAAAATABEAAAAJAAEAAAATABAAAAAKAAAAAAATABEAAAAKAAEAAAATABAAAAALAAAAAAATABEAAAALAAEAAAATABAAAAAMAAAAAAATABEAAAAMAAEAAAATABAAAAAMAAIAAAATABEAAAANAAAAAAATABEAAAANAAEAAAATABAAAAANAAIAAAATABEAAAAOAAAAAAATABEAAAAOAAEAAAATABAAAAAOAAIAAAATABEAAAAPAAAAAAATABEAAAAPAAEAAAATABAAAAAPAAIAAAATABEAAAAQAAAAAAATABEAAAAQAAEAAAATABAAAAAQAAIAAAATABEAAAARAAAAAAATABEAAAARAAEAAAATABAAAAARAAIAAAATABEAAAAPAP//AAATABAAAAAQAP7/AAATABAAAAAQAP//AAATABEAAAARAPz/AAATABEAAAARAP3/AAATABAAAAARAP7/AAATAA8AAAAQAPz/AAATABEAAAAQAP3/AAATAA8AAAAQAPv/AAATABAAAAARAPr/AAATAA8AAAARAPv/AAATABAAAAARAPf/AAANAA4AAAARAPj/AAATABAAAAARAPn/AAATABEAAAARAP//AAATABAAAAATAPf/AAAOAA8AAAATAPj/AAAOABAAAAATAPn/AAAOABEAAAAUAPf/AAAPAA8AAAAUAPj/AAAPABAAAAAUAPn/AAAPABEAAAAVAPf/AAAQAA8AAAAVAPj/AAAQABAAAAAVAPn/AAAQABEAAAAWAPf/AAARAA8AAAAWAPj/AAARABAAAAAWAPn/AAARABEAAAAXAPf/AAASAA8AAAAXAPj/AAASABAAAAAXAPn/AAASABEAAAATAPr/AAAOAA8AAAATAPv/AAAOABAAAAATAPz/AAAOABEAAAAUAPr/AAAPAA8AAAAUAPv/AAAPABAAAAAUAPz/AAAPABEAAAAVAPr/AAAQAA8AAAAVAPv/AAAQABAAAAAVAPz/AAAQABEAAAAWAPr/AAARAA8AAAAWAPv/AAARABAAAAAWAPz/AAARABEAAAAXAPr/AAASAA8AAAAXAPv/AAASABAAAAAXAPz/AAASABEAAAATAP3/AAAOABAAAAATAP7/AAAOABEAAAATAP//AAAOABEAAAAUAP3/AAAPABAAAAAUAP7/AAAPABEAAAAUAP//AAAPABEAAAAVAP3/AAAQABAAAAAVAP7/AAAQABEAAAAVAP//AAAQABEAAAAWAP3/AAARABAAAAAWAP7/AAARABEAAAAWAP//AAARABEAAAAXAP3/AAASAA8AAAAXAP7/AAASABAAAAAXAP//AAASABEAAAATAAAAAAAOAA8AAAATAAEAAAAOABAAAAAUAAAAAAAPAA8AAAAUAAEAAAAPABAAAAAVAAAAAAAQAA8AAAAVAAEAAAAQABAAAAAWAAAAAAARAA8AAAAWAAEAAAARABAAAAAIAPj/AAAOABAAAAAIAPn/AAAOABAAAAADAPn/AAAOABAAAAAEAPn/AAAOABAAAAAFAPn/AAAOABAAAAAGAPn/AAAOABAAAAAGAPj/AAAOABAAAAAHAPn/AAAOABAAAAAHAPj/AAAOABAAAAAJAPf/AAAOAA4AAAAIAPf/AAAOAA4AAAAHAPf/AAAOAA4AAAAGAPf/AAAOAA4AAAA=")
tile_set = ExtResource("1_jeuxh")

[node name="TileMapLayer2" type="TileMapLayer" parent="TileMap"]
position = Vector2(-8, 1)
tile_map_data = PackedByteArray("AAD///T/AAAMAAYAAAD///X/AAAMAAcAAAD///b/AAAMAAgAAAD///f/AAAMAAkAAAAAAPT/AAANAAYAAAAAAPX/AAANAAcAAAAAAPb/AAANAAgAAAAAAPf/AAANAAkAAAABAPT/AAAOAAYAAAABAPX/AAAOAAcAAAABAPb/AAAOAAgAAAABAPf/AAAOAAkAAAACAPT/AAAPAAYAAAACAPX/AAAPAAcAAAACAPb/AAAPAAgAAAACAPf/AAAPAAkAAAADAPT/AAAQAAYAAAADAPX/AAAQAAcAAAADAPb/AAAQAAgAAAADAPf/AAAQAAkAAAAEAPT/AAARAAYAAAAEAPX/AAARAAcAAAAEAPb/AAARAAgAAAAEAPf/AAARAAkAAAAFAPT/AAASAAYAAAAFAPX/AAASAAcAAAAFAPb/AAASAAgAAAAFAPf/AAASAAkAAAAGAPT/AAANAAYAAAAGAPX/AAANAAcAAAAGAPb/AAANAAgAAAAGAPf/AAANAAkAAAAHAPT/AAAOAAYAAAAHAPX/AAAOAAcAAAAHAPb/AAAOAAgAAAAHAPf/AAAOAAkAAAAIAPT/AAAPAAYAAAAIAPX/AAAPAAcAAAAIAPb/AAAPAAgAAAAIAPf/AAAPAAkAAAAJAPT/AAAQAAYAAAAJAPX/AAAQAAcAAAAJAPb/AAAQAAgAAAAJAPf/AAAQAAkAAAAKAPT/AAARAAYAAAAKAPX/AAARAAcAAAAKAPb/AAARAAgAAAAKAPf/AAARAAkAAAALAPT/AAASAAYAAAALAPX/AAASAAcAAAALAPb/AAASAAgAAAALAPf/AAASAAkAAAAMAPT/AAANAAYAAAAMAPX/AAANAAcAAAAMAPb/AAANAAgAAAAMAPf/AAANAAkAAAANAPT/AAAOAAYAAAANAPX/AAAOAAcAAAANAPb/AAAOAAgAAAANAPf/AAAOAAkAAAAOAPT/AAATAAYAAAAOAPX/AAAPAAcAAAAOAPb/AAAPAAgAAAAOAPf/AAAPAAkAAAAPAPT/AAAQAAYAAAAPAPX/AAAQAAcAAAAPAPb/AAAQAAgAAAAPAPf/AAAQAAkAAAAQAPT/AAARAAYAAAAQAPX/AAARAAcAAAAQAPb/AAARAAgAAAAQAPf/AAARAAkAAAARAPT/AAAOAAYAAAARAPX/AAAOAAcAAAARAPb/AAAOAAgAAAARAPf/AAAOAAkAAAASAPT/AAAPAAYAAAASAPX/AAAPAAcAAAASAPb/AAAPAAgAAAASAPf/AAAPAAkAAAATAPT/AAAQAAYAAAATAPX/AAAQAAcAAAATAPb/AAAQAAgAAAATAPf/AAAQAAkAAAAUAPT/AAARAAYAAAAUAPX/AAARAAcAAAAUAPb/AAARAAgAAAAUAPf/AAARAAkAAAAVAPT/AAAOAAYAAAAVAPX/AAAOAAcAAAAVAPb/AAAOAAgAAAAVAPf/AAAOAAkAAAAWAPT/AAAPAAYAAAAWAPX/AAAPAAcAAAAWAPb/AAAPAAgAAAAWAPf/AAAPAAkAAAAXAPT/AAAQAAYAAAAXAPX/AAAQAAcAAAAXAPb/AAAQAAgAAAAXAPf/AAAQAAkAAAAYAPT/AAARAAYAAAAYAPX/AAARAAcAAAAYAPb/AAARAAgAAAAYAPf/AAARAAkAAAAZAPT/AAASAAYAAAAZAPX/AAASAAcAAAAZAPb/AAASAAgAAAAZAPf/AAASAAkAAAA=")
tile_set = ExtResource("1_jeuxh")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-160, 52)
shape = ExtResource("3_npm0j")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-82, 51)
shape = ExtResource("3_npm0j")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(64, 51)
shape = ExtResource("3_npm0j")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(-184, 75)
polygon = PackedVector2Array(-10, -126, 52, -126, 52, -126, 111, -126, 111, -136, 135, -136, 136, -136, 136, -94, 150, -94, 150, -136, 319, -136, 319, 1, -10, 1, -10, -62, 151, -61, 151, -81, 46.3229, -81, -10, -81, -10, -123, -13, -123, -14, 5, 324, 3, 321, -141, -16, -138, -10, -123)

[node name="YSortcafe" type="Node2D" parent="."]
y_sort_enabled = true

[node name="TileMapLayer3" type="TileMapLayer" parent="YSortcafe"]
y_sort_enabled = true
position = Vector2(-183, 76)
tile_map_data = PackedByteArray("AAAOAPf/AAAIAAoAABAMAPf/AAAIAAoAAAAAAPf/AAALAAoAAAABAPf/AAALAAoAAAADAPf/AAAGABAAAAAAAPv/AAALAAoAAAABAPv/AAALAAoAAAACAPv/AAALAAoAAAADAPv/AAALAAoAAAAEAPv/AAALAAoAAAAFAPv/AAALAAoAAAAGAPv/AAALAAoAAAAHAPv/AAALAAoAAAAAAP7/AAAEAAwAAAACAP7/AAAGAAwAAAAFAP7/AAAEAAwAAAAHAP7/AAAEAAwAAAAOAP7/AAAEAAwAAAAQAP7/AAAEAAwAAAAFAPf/AAAPAAoAAAAJAPj/AAAJAA0AAAA=")
tile_set = ExtResource("1_jeuxh")

[node name="TileMapLayer4" type="TileMapLayer" parent="YSortcafe"]
y_sort_enabled = true
position = Vector2(-183, 77)
tile_map_data = PackedByteArray("AAABAP7/AAABAAsAAAAGAP7/AAABAAsAAAAPAP7/AAABAAsAAAABAPb/AAASAAsAAAAQAPj/AAAEAA8AAAARAPj/AAACABEAAAABAPr/AAAEAAcAAAA=")
tile_set = ExtResource("1_jeuxh")

[node name="NPCContainer" type="Node2D" parent="YSortcafe"]
y_sort_enabled = true
position = Vector2(0, -1)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(-183, 74)
navigation_polygon = SubResource("NavigationPolygon_npm0j")

[node name="CafeTimer" type="Timer" parent="."]

[node name="OrderTriggerArea" type="Area2D" parent="."]
collision_mask = 3
script = ExtResource("6_ke1rn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OrderTriggerArea"]
position = Vector2(-57, -30)
shape = SubResource("CircleShape2D_ke1rn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -186.0
offset_top = -103.0
offset_right = -146.0
offset_bottom = -63.0

[node name="CafeToEx" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 30.0
offset_bottom = 31.0
texture_normal = ExtResource("3_ataqq")

[node name="Points" type="Node2D" parent="."]

[node name="SpawnPoint" type="Marker2D" parent="Points"]
position = Vector2(115, -47)

[node name="Queue" type="Node2D" parent="Points"]

[node name="Q1" type="Marker2D" parent="Points/Queue"]
position = Vector2(-18, -28)

[node name="Q2" type="Marker2D" parent="Points/Queue"]
position = Vector2(7, -28)

[node name="Q3" type="Marker2D" parent="Points/Queue"]
position = Vector2(30, -28)

[node name="Q4" type="Marker2D" parent="Points/Queue"]
position = Vector2(53, -28)

[node name="Seat" type="Node2D" parent="Points"]

[node name="S1" type="Marker2D" parent="Points/Seat"]
position = Vector2(-178, 30)

[node name="S2" type="Marker2D" parent="Points/Seat"]
position = Vector2(-144, 30)

[node name="S3" type="Marker2D" parent="Points/Seat"]
position = Vector2(-99, 30)

[node name="S4" type="Marker2D" parent="Points/Seat"]
position = Vector2(-62, 30)

[node name="S5" type="Marker2D" parent="Points/Seat"]
position = Vector2(47, 31)

[node name="S6" type="Marker2D" parent="Points/Seat"]
position = Vector2(81, 31)

[node name="SpawnQueue" type="Marker2D" parent="Points"]
position = Vector2(113, -29)

[node name="QueueSeat" type="Marker2D" parent="Points"]
position = Vector2(-20, 30)

[node name="Drink" type="Node2D" parent="Points"]

[node name="D1" type="Marker2D" parent="Points/Drink"]
position = Vector2(-177, 49)

[node name="D2" type="Marker2D" parent="Points/Drink"]
position = Vector2(-144, 49)

[node name="D3" type="Marker2D" parent="Points/Drink"]
position = Vector2(-98, 50)

[connection signal="body_entered" from="OrderTriggerArea" to="OrderTriggerArea" method="_on_body_entered"]
[connection signal="pressed" from="Control/CafeToEx" to="TileMap" method="_on_cafe_to_ex_pressed"]
